--- a/views/admin/uploads.pug
+++ b/views/admin/uploads.pug
@@ -42,10 +42,10 @@ block content
                                 button.btn.btn-success(name="moderationValue" value="approveAndTrustUser" type="submit") Approve And Trust User
                                 br
                                 br
-                                button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" ) Ban Video
+                                button.btn.btn-danger(name="moderationValue" value="banVideo" type="submit" ) Delete Video
                                 br
                                 br
-                                button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit") Ban Video And User
+                                button.btn.btn-danger(name="moderationValue" value="banVideoAndUser" type="submit") Delete Video And Ban User
 
                     else
                         h3 NO UPLOADER?
