--- a/views/media.pug
+++ b/views/media.pug
@@ -19,8 +19,8 @@ block content
                 br
                 h4 If your upload is stuck on processing, let an admin know via the social links at the bottom of the page and we'll take a look.
 
-            div(id="processing" style="max-width:443px;margin:0 auto;")
-                h2 Your upload is currently 1% done
+            div(style="max-width:443px;margin:0 auto;")
+                h2(id="processing") Your upload is currently 1% done
 
         br
         br
