--- a/views/mediaPlayerPartials/progressTrackerJs.pug
+++ b/views/mediaPlayerPartials/progressTrackerJs.pug
@@ -19,6 +19,9 @@ script.
       data,
       success: function (data) {
         console.log(data);
+
+        $('#processing').text(`Your upload is currently ${data}% done being converted`);
+
       },
       error: function (err) {
         console.log(err);
