about to finish functionality

--- a/views/media.pug
+++ b/views/media.pug
@@ -388,7 +388,8 @@ block extra_css
 
 block extra_footer_js
 
-  include ./mediaPlayerPartials/progressTrackerJs
+  if upload.status == 'processing'
+    include ./mediaPlayerPartials/progressTrackerJs
 
 
 
