allow branding to be changed via private file

--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,7 +60,7 @@ block content
 
   div.container(style="text-align:center")
 
-    h1.lead-header.fw Introducing NodeTube
+    h1.lead-header.fw Introducing #{brandName}
     h2.tagline-header.fw An open-source YouTube alternative powered by Node.js
     hr
 
