--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -6,17 +6,14 @@ style.
 
 footer
   .container.text-center
-    p.pull-left © 2020 NodeTube Organization &nbsp
+    p.pull-left © #{instanceDomainName} &nbsp
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube" target="_blank") GitHub
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H" target="_blank") Discord
+    p.pull-left  Bitcoin: bc1q97twc0cvrluv3u6jwygyfmtzxwuddkcwmk949y &nbsp
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/nodetube_org" target="_blank") Twitter
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=nullvideo" target="_blank") The Daily Shitter
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://riot.im/app/#/room/#nodetube:matrix.org" target="_blank") Riot.im
-
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/nodetube" target="_blank") Reddit
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/VirusOutbreak" target="_blank") Reddit
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
