--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -26,7 +26,9 @@ style.
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href=`/`)
-        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") NodeTube
+        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") nullvideo
+      a.navbar-brand(href=`https://reddit.com/r/VirusOutbreak`)
+        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") r/VirusOutbreak
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
         li(class=(title == 'Home') ? 'active' : undefined)
