--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -21,7 +21,7 @@ block content
         .container
                 div(style="padding-top:75px;max-width:629px;margin:0 auto;")
 
-                        h3 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
+                        h3 #{brandName} was created to allow anyone with basic technical skills to run their own media hosting platform
                         br
                         h3(style="display:inline")  Please check out the
                                 a(style="margin-left:5px" href="https://github.com/mayeaux/nodetube") GitHub Repo
