--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -60,7 +60,7 @@ block content
 
   div.container(style="text-align:center")
 
-    h1.lead-header.fw Introducing NodeTube
+    h1.lead-header.fw Introducing #{brandName}
     h2.tagline-header.fw An open-source YouTube alternative powered by Node.js
     hr
 
@@ -68,7 +68,7 @@ block content
       .col-sm-4
         h2.pitch-header.fw No Email Required &nbsp
           i.fa.fa-bolt
-        p.explainer.fw Start your channel on NodeTube
+        p.explainer.fw Start your channel on #{brandName}
         p.fw without having to verify your email
       .col-sm-4
         h2.pitch-header.fw Video, Audio, Images &nbsp
@@ -78,7 +78,7 @@ block content
       .col-sm-4
         h2.pitch-header.fw 100% Open Source &nbsp
           i.fa.fa-space-shuttle
-        p.explainer.fw Create your own NodeTube instance
+        p.explainer.fw Create your own #{brandName} instance
         p.fw in just minutes following our tutorials
 
 
@@ -87,12 +87,12 @@ block content
         h2.pitch-header.fw #{channelAmount} Channels &nbsp
           i.fa.fa-users
         p.explainer.fw The number of creators who have
-        p.fw chosen NodeTube for their media hosting
+        p.fw chosen #{brandName} for their media hosting
       .col-sm-4
         h2.pitch-header.fw #{mediaAmount} Uploads &nbsp
           i.fa.fa-upload
         p.explainer.fw The number of  times creators have
-        p.fw chosen NodeTube for their content hosting
+        p.fw chosen #{brandName} for their content hosting
       .col-sm-4
         h2.pitch-header.fw #{viewAmount} Views &nbsp
           i.fa.fa-video
