--- a/views/public/tos.pug
+++ b/views/public/tos.pug
@@ -11,12 +11,12 @@ block content
 
         h2 Creating Accounts
 
-        p When you create a member account you agree to maintain the security of your password and accept all risk that someone may access your account without your permission. If you discover or suspect any Service security breaches, please let us know as soon as possible. You represent and warrant to us that all information that you provide in connection with your account is accurate, truthful, current and complete. NodeTube reserves the right to deny, deactivate, or terminate any account at our discretion.
+        p When you create a member account you agree to maintain the security of your password and accept all risk that someone may access your account without your permission. If you discover or suspect any Service security breaches, please let us know as soon as possible. You represent and warrant to us that all information that you provide in connection with your account is accurate, truthful, current and complete. #{brandName} reserves the right to deny, deactivate, or terminate any account at our discretion.
 
 
         h2 Right to Use the Service
 
-        p On the condition that you fully comply with these Terms, NodeTube grants you a limited, nonexclusive, non-transferable and revocable license to access and use the Service. Except as expressly authorized by these Terms, you may not (a) modify, disclose, alter, translate or create derivative works of the Service, (b) license, sublicense, resell, distribute, lease, rent, lend, transfer, assign or otherwise dispose of the Service, (c) disassemble, decompile or reverse engineer any of the software components of the Service, (d) copy, frame or mirror any part of the Service, (e) interfere with or disrupt the integrity or performance of the Service or (f) attempt to gain unauthorized access to the Service or its related systems or networks.
+        p On the condition that you fully comply with these Terms, #{brandName} grants you a limited, nonexclusive, non-transferable and revocable license to access and use the Service. Except as expressly authorized by these Terms, you may not (a) modify, disclose, alter, translate or create derivative works of the Service, (b) license, sublicense, resell, distribute, lease, rent, lend, transfer, assign or otherwise dispose of the Service, (c) disassemble, decompile or reverse engineer any of the software components of the Service, (d) copy, frame or mirror any part of the Service, (e) interfere with or disrupt the integrity or performance of the Service or (f) attempt to gain unauthorized access to the Service or its related systems or networks.
 
 
         h2 Prohibited Use of the Service
@@ -29,7 +29,7 @@ block content
         p User Content that promotes terrorism or other acts of violence;
         p User Content that may infringe, misappropriate or violate any intellectual property rights, rights of privacy, rights of publicity or any other rights of others;
         p User Content that may contain viruses, corrupted data or other harmful, disruptive or destructive files or code;
-        p User Content that may expose NodeTube or users of the Service to harm or liability of any type; and/or
+        p User Content that may expose #{brandName} or users of the Service to harm or liability of any type; and/or
         p User Content that you are contractually or legally required to keep confidential.
         p Also, you may not do any of the following in connection with the Service or other users:
 
