--- a/views/uploading.pug
+++ b/views/uploading.pug
@@ -48,7 +48,7 @@ block content
         h1.fw(style="display:inline") File Upload
 
         br
-        h3.fw NodeTube supports video, audio and image uploads
+        h3.fw #{brandName} supports video, audio and image uploads
 
         br
         br
@@ -71,7 +71,7 @@ block content
 
         if user.plan == 'free' && plus_enabled
           p You can raise this limit to 2000 MB by subscribing for&nbsp
-            a(href="/account?to=pt-plus") NodeTube Plus
+            a(href="/account?to=pt-plus") #{brandName} Plus
 
         if site_rating
 
