--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -26,7 +26,7 @@ style.
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href=`/`)
-        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") nullvideo
+        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") #{brandName}
       a.navbar-brand(href=`https://reddit.com/r/VirusOutbreak`)
         h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") r/VirusOutbreak
     .collapse.navbar-collapse
