--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -11,7 +11,7 @@ footer
 
     p.pull-left  Bitcoin: bc1q97twc0cvrluv3u6jwygyfmtzxwuddkcwmk949y &nbsp
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=nullvideo" target="_blank") The Daily Shitter
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=#{brandName}" target="_blank") The Daily Shitter
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/VirusOutbreak" target="_blank") Reddit
 
