--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -11,6 +11,8 @@ footer
 
     p.pull-left  Bitcoin: bc1q97twc0cvrluv3u6jwygyfmtzxwuddkcwmk949y &nbsp
 
+    p.pull-left  #{instanceContactEmail} &nbsp
+
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=#{brandName}" target="_blank") The Daily Shitter
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://reddit.com/r/VirusOutbreak" target="_blank") Reddit
