--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -6,12 +6,11 @@ style.
 
 footer
   .container.text-center
-    p.pull-left © #{instanceDomainName} &nbsp
-
+    p.pull-left ©2020 #{instanceDomainName} &nbsp
 
     p.pull-left  Bitcoin: bc1q97twc0cvrluv3u6jwygyfmtzxwuddkcwmk949y &nbsp
 
-    p.pull-left  #{instanceContactEmail} &nbsp
+    p.pull-left  a(href="mailto:#{instanceContactEmail}?subject=#{brandName}) #{instanceContactEmail} &nbsp
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=#{brandName}" target="_blank") The Daily Shitter
 
