add contact email to footer

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -10,7 +10,7 @@ footer
 
     p.pull-left  Bitcoin: bc1q97twc0cvrluv3u6jwygyfmtzxwuddkcwmk949y &nbsp
 
-    p.pull-left  a(href="mailto:#{instanceContactEmail}?subject=#{brandName}) #{instanceContactEmail} &nbsp
+    p.pull-left  a(href="mailto:#{instanceContactEmail}?subject=#{brandName}") #{instanceContactEmail} &nbsp
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://thedailyshitter.com/?ref=#{brandName}" target="_blank") The Daily Shitter
 
