--- a/views/error/403.pug
+++ b/views/error/403.pug
@@ -1,6 +1,7 @@
 extends ../layout
 
 block content
-    h2 Sorry you're not allowed to access this.
+    .container
+        h2 Sorry you're not allowed to access this.
 
-    h3 Please try again.
+        h3 Please try again.
