--- a/views/error/404.pug
+++ b/views/error/404.pug
@@ -1,6 +1,7 @@
 extends ../layout
 
 block content
-    h2 Sorry your content wasn't found!
+    .container
+        h2.fw Sorry your content wasn't found!
 
-    h3 Please try again.
+        h3.fw Please try again.
