--- a/views/error/500.pug
+++ b/views/error/500.pug
@@ -1,6 +1,7 @@
 extends ../layout
 
 block content
-    h2 Sorry our server returned an error!
+    .container
+        h2.fw Sorry our server returned an error!
 
-    h4 We've been notified, please try again shortly.
+        h4.fw We've been notified, please try again shortly.
