--- a/views/layout.pug
+++ b/views/layout.pug
@@ -29,6 +29,7 @@ html
     link(rel='shortcut icon', href='/favicon.ico')
     link(rel='apple-touch-icon', href='/images/app-icon-512x512.png')
     link(rel='manifest', href='/manifest.json')
+    link(rel='alternate', type='application/rss+xml', href='/media/recent/rss')
     link(href='https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css', rel='stylesheet')
     block extra_css
 
