add branding in title and footer

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -6,7 +6,7 @@ style.
 
 footer
   .container.text-center
-    p.pull-left Â© 2020 NodeTube Organization &nbsp
+    p.pull-left &copy;© 202 #{brandName} &nbsp
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube" target="_blank") GitHub
 
