--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -141,7 +141,7 @@ block content
     // TODO: export a variable plus_enabled if user enables payments
     // TODO: has to have styled updated with fw
     if plus_enabled
-      h2.fw.text-center(style="margin-bottom:16px") NodeTube Plus
+      h2.fw.text-center(style="margin-bottom:16px") #{brandName} Plus
       div.pt-plus.center-div.text-center
         if user.plan == 'plus'
           p Thank you so much for subscribing!
