--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -26,7 +26,7 @@ style.
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href=`/`)
-        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") NodeTube
+        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") #{brandName}
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
         li(class=(title == 'Home') ? 'active' : undefined)
