--- a/views/media.pug
+++ b/views/media.pug
@@ -434,6 +434,8 @@ block extra_footer_js
 
   include ./mediaPlayerPartials/reactFunctionalityJs
 
+  include ./mediaPlayerPartials/webtorrent
+
   script.
     var myTextEl = document.getElementById('descriptionText');
     if (myTextEl)
